# 00.00.26 (60719) Jan 27, 2012
Don't show histograms for each user
Join the log files split across an exit + start
# 00.00.25 (60704) Jan 26, 2012
Changed group analysis tool file chooser to select one folder only
Make another histogram that uses the first click as time-zero instead of when the sim is open
For the time chart, add time on views: molecules & bar graph
Plot the histogram of average number of clicks for each condition
For the time chart, added time spent on each solution
For the time chart, plot both time sim open and first click to last click
Improved loading multiple groups
Instead of "student null", use the first part of the log file name
Removed "utah" in "utah session started at..."
Removed the legend with the sim names
Added pop-up window for server monitor text output
# 00.00.24 (60567) Jan 24, 2012
# 00.00.23 (60550) Jan 23, 2012
Added group comparison tool which produces comparative bar charts for multiple conditions
# 00.00.22 (60529) Jan 23, 2012
Fixed: Null pointer checks on server database monitor
Fixed: Pressing reset all should not count as a solution transition
Fixed: The total number of clicks and the sum of the clicks per min should be equal in the histogram
Fixed: If the conductivity test is selected, the analysis tool should not count it as a view transition
Fixed: If the conductivity test is selected, the analysis tool should count the view as liquid for "time on views"
Added Font + and Font - buttons to real time analysis
Renamed plot-student-activity => post-analysis
# 00.00.21 (60505) Jan 23, 2012
Rewrote state change detection code for tab 2 based on different radio buttons
Only count transitions within same tab, not when switching tabs
Fixed histogram to read clicks within each minute, not click frequency
# 00.00.20 (60477) Jan 20, 2012
# 00.00.19 (60471) Jan 19, 2012
# 00.00.18 (60465) Jan 19, 2012
# 00.00.17 (60454) Jan 18, 2012
# 00.00.16 (60451) Jan 18, 2012
# 00.00.15 (60441) Jan 18, 2012
# 00.00.14 (60439) Jan 18, 2012