@@ -1,3 +1,5 @@
+Fixed monitor to use new authentication, see #3231
+Fixed monitor to use new database layout, see #3230
 # 00.00.26 (60719) Jan 27, 2012
 Don't show histograms for each user
 Join the log files split across an exit + start
